Mejoras aplicadas: - Se incorpora un nuevo fragmento: ModificarReceta, que usa ViewModel para obtener los datos de los ingredientes de la receta (No se ha podido completar su implementación, pero si hacer uso del viewModel y viewModelFactory. Modificar recetas aun no aplica las modificaciones a las recetas) - Se añade un boton para cerrar la sesión de usuario - Se añaden comentarios al código para mejorar su legibilidad

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/beisClaro"
-    tools:context=".ui.fragmentos.Home">
+    tools:context=".ui.fragments.Home">
 
     <ImageView
         android:id="@+id/imgPrincipal"
