--- a/app/src/main/res/layout/fragment_listado_recetas.xml
+++ b/app/src/main/res/layout/fragment_listado_recetas.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragmentos.ListadoRecetas"
+    tools:context=".ui.fragments.ListadoRecetas"
     android:id="@+id/fragment_listado_recetas">
 
 </androidx.recyclerview.widget.RecyclerView>
