--- a/app/src/main/res/layout/fragment_registro_usuario.xml
+++ b/app/src/main/res/layout/fragment_registro_usuario.xml
@@ -5,7 +5,7 @@
     android:id="@+id/registro"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragmentos.RegistroUsuario">
+    tools:context=".ui.fragments.RegistroUsuario">
 
     <ImageView
         android:id="@+id/ivHello"
